--- a/curlyhairapp/index.html
+++ b/curlyhairapp/index.html
@@ -18,8 +18,6 @@
   <!-- tabbar navigation -->
   <nav class="tabbar">
 
-
-
     <a href="#guide" onclick="showPage('guide')">
       <img src="images/guide.svg" alt="guide">
       <p>Guide</p>
@@ -28,7 +26,6 @@
       <img src="images/qr.svg" alt="testprodukter">
       <p>TEST</p>
     </a>
-
     <a href="#soeg" onclick="showPage('soeg')">
       <img src="images/soeg.svg" alt="soeg">
       <p>SØG</p>
@@ -40,26 +37,37 @@
 
   <!-- pages -->
   <!-- home page - TEST produkter -->
-  <section id="home" class="page">
+  <section id="home" class="page background">
     <header class="topbar">
-          <a href="#clients" onclick="showPage('clients')">
-        <img src="images/calendar.svg" alt="Kalender">
-      </a>
+      <a href="#test" onclick="showPage('test')"> </a>
+      <a href="info"></a>
     </header>
+<div id="tekstbox1">
+<h1>Er produktet godkendt?</h1>
+<p>Indtast ingredienserne eller scan dit yndlingshårprodukt for at se,   om det er Curly Girl (CG) godkendt! </p>
+</div>
+<div>
+  <p id="indtastningsfelt">Indsast ingrediensliste her… <br>(Adskil ingredienser med komma, og klik på indsende for at se resultaterne.)</p>
+  <button class="bottomdark"type="TEST" name="testproducts">
+    <p>TEST</p>
+  </button></div>
 
-    <div class="headermain">
-      <h2>Test af hårprodukter</h2>
-        </div>
-        <p>bfcjhke febwjk febjkef</p>
-        <h1>nfcjlwfnewl</h1>
-    </section>
+<div id="qr">
+  <a href=""><img src="images/qr.svg" alt="qr">
+  <p>Scan QR kode</p></a>
+
+</div>
+
+
+
+
+  </section>
 
   <!-- GUIDE page -->
-  <section id="guide" class="page">
+  <section id="guide" class="page background">
     <header class="topbar">
 
       <a href="#guide" onclick="showPage('guide')">
-        <img src="images/calendar.svg" alt="Kalender">
       </a>
     </header>
 
@@ -75,7 +83,7 @@
   </section>
 
   <!-- Kontakt page -->
-  <section id="kontakt" class="page">
+  <section id="kontakt" class="page background">
     <header class="topbar">
       <h2>Søg på produkter her</h2>
     </header>
