--- a/curlyhairapp/index.html
+++ b/curlyhairapp/index.html
@@ -9,7 +9,7 @@
   <link type="text/css" rel="stylesheet" href="https://cdn.firebase.com/libs/firebaseui/3.5.2/firebaseui.css" />
   <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/css/materialize.min.css">
-  <link rel="stylesheet" href="css/style.css">
+<link rel="stylesheet" href="css/style.css">
   <link rel="shortcut icon" type="image/png" href="img/favicon.png" />
 
 </head>
@@ -33,7 +33,7 @@
       <a href="#test" onclick="showPage('test')"> </a>
       <a href="info"></a>
     </header>
-    <button id="help" type="button" name="button"><a href="#product" onclick="showPage('product')">HJÆLP</a></button>
+    <button id="help" type="button" name="button"><a href="#kontakt" onclick="showPage('kontakt')">HJÆLP</a></button>
 
     <div id="tekstbox1">
       <h1>Er produktet godkendt?</h1>
@@ -68,10 +68,83 @@
       <a href="#guide" onclick="showPage('guide')"></a>
     </header>
 
+    <h1>Curly Girl Guide</h1>
+
+    <button class="bottomdark" type="button" name="ommetoden"><a href="#ommetoden" onclick="showPage('ommetoden')">Om metoden</a></button>
+    <button class="bottomdark" type="button" name="stepbystep"><a href="#stepbystep" onclick="showPage('stepbystep')">Step by step</a></button>
+
   </section>
 
 
 
+  <!-- Om metoden page -->
+  <section id="ommetoden" class="page">
+    <header class="topbar">
+      <a href="#ommetoden" onclick="showPage('ommetoden')"></a>
+    </header>
+
+    <h1>Om Curly Girl metoden</h1>
+
+<div class="textboxguide">
+  <h3>Hvad skal jeg undgå?</h3>
+  <p>Du skal som det første, sikre dig at alle dine produkter, som du har der hjemme kan benyttes på Curly Girl metoden.</p>
+
+<ol>
+  <p>Du kan se hvilke ingredienser du skal undgå her:</p>
+<li>Skarbe Sulfater som primært er i hårshampoo </li>
+(du kan til nød bruge sulfatfri shampoo, også kaldt low-poo shampoo)
+<li>Silikone </li>
+(da det lægger sig som en falsk hinde omkring hårstrået)</li>
+<li>Udtørrende alkohol (da det på sigt udtørrer håret)</li>
+<li>Mineralolie (det er kunstigt olie, som kun kan vaskes ud med sulfat)</li>
+<li>Voks (da det kun kan vaskes ud med sulfat shampoo)</li></ol>
+</div>
+
+<div class="textboxguide">
+  <h3>Du skal også undgå følgende:</h3>
+  <p>- Varme <br>
+(hvis du bruger diffuser, skal du benytte den laveste eller middel varme, da den høje temperatur slider på håret)
+<br>
+- At børste og kamme tørt hår <br>
+(håret vil være mere frizzy samt at det slider ekstra på håret, som får det til at knække)</p>
+</div>
+
+<div class="textboxguide">
+  <h3>Du skal</h3>
+  <ol>
+    <li>Lægge din børste væk og anskaffe dig en bredtandetkam.</li>
+    <li>Finde en bomulds t-shirt eller et microfiberhåndklæde frem, da almindelige bomuldshåndklæder slider på håret og fremtvinger frizz.</li>
+    <li>Trykke på de nøgleord du har brug for, når du skal shoppe produkter</li>
+    <li>Anskaffe dig vaskebalsam,  plejebalsam,  hårmaske  og stylingprodukter, som ikke indeholder nogen af de ingredienser som man bør undgå på Curly Girl metoden.</li>
+    <li>Huske at alle produkter på denne side er godkendt til metoden.</li>
+
+  </ol>
+</div>
+
+  <button class="bottomdark" type="button" name="stepbystep"><a href="#stepbystep" onclick="showPage('stepbystep')">Step by step</a></button>
+  <p>Denne webapp er tilknyttet noget Curlyhair.dk. Oplysningerne, der dyrkes på dette site, opretholdes af en krøllet pigeentusiast. Hvis du finder uoverensstemmelser i resultaterne, bedes du kontakte os.</p>
+    <button class="bottomlight" type="button" name="kontakt"><a href="#kontakt" onclick="showPage('kontakt')">Kontakt os</a></button>
+
+  </section>
+
+
+
+
+
+
+
+
+  <!-- Step by step page -->
+  <section id="stepbystep" class="page">
+    <header class="topbar">
+      <a href="#stepbystep" onclick="showPage('stepbystep')"></a>
+    </header>
+
+    <h1>Step by step</h1>
+
+    <button class="bottomlight" type="button" name="kontakt"><a href="#kontakt" onclick="showPage('kontakt')">Kontakt</a></button>
+
+  </section>
 
 
   <!-- Produkt side page -->
