--- a/curlyhairapp/index.html
+++ b/curlyhairapp/index.html
@@ -150,16 +150,16 @@
   <!-- Produkt side page -->
   <section id="product" class="page">
     <header class="topbar">
-      <h2>Søg på produkter her</h2>
-    </header>
 
+    </header>
+    <h1>Hvilket produkt leder du efter?</h1>
     <select id="select-genre" name="genre" onchange="genreSelected(this.value)">
       <option value="">Vælg produkt type</option>
     </select>
     <section id="products-by-genre-container" class="grid-container"></section>
 
-    <div class="jep">
 
+<h1>Alle produkter</h1>
       <section id="products-container" class="grid-container"></section>
 
   <!-- laver fejl
