--- a/public_html/index.html
+++ b/public_html/index.html
@@ -4,7 +4,7 @@
 <head>
   <meta charset="utf-8">
   <title>Curlyhair.dk - webapp</title>
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+<meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
   <meta name="description" content="Kom godt i gang med Curly Girl Metoden">
   <link type="text/css" rel="stylesheet" href="https://cdn.firebase.com/libs/firebaseui/3.5.2/firebaseui.css" />
   <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
