--- a/index.html
+++ b/index.html
@@ -160,7 +160,7 @@
     <section id="products-by-genre-container" class="grid-container"></section>
 
 
-<h1>Alle produkter</h1>
+<h1 id="alle">Alle produkter</h1>
       <section id="products-container" class="grid-container"></section>
 
   <!-- laver fejl
